chore: svg alignment fix

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -216,3 +216,7 @@ table {
     }
   }
 }
+
+span > svg {
+  display: block;
+}
